# blacken-docs

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.rst  HISTORY.rst  README.md  README.rst  azure-pipelines.yml  blacken_docs.py  mypy.ini  py39-notebooks.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: renovate.json5
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: main.yml
requirements/: compile.py  py310.txt  py311.txt  py312.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/blacken_docs/: __init__.py  __main__.py
test-docs/: README.md  README.py  README.rst  README.text  README.txt
tests/: blacken_docs_test.py  test_blacken_docs.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt  requirements.in
