[metadata]
name = blacken_docs
version = 1.12.1
description = Run `black` on python code blocks in documentation files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/blacken-docs
author = Anthony Sottile
author_email = asottile@umich.edu
maintainer = Adam Johnson
maintainer_email = me@adamj.eu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Changelog = https://github.com/adamchainz/blacken-docs/blob/main/HISTORY.rst

[options]
py_modules = blacken_docs
install_requires =
    black>=22.1.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    blacken-docs=blacken_docs:main

[bdist_wheel]
universal = True

[coverage:run]
branch = True
parallel = True
source =
    blacken_docs
    tests

[coverage:report]
show_missing = True
