[metadata]
name = blacken_docs
version = 1.12.1
description = Run `black` on python code blocks in documentation files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/blacken-docs
author = Anthony Sottile
author_email = asottile@umich.edu
maintainer = Adam Johnson
maintainer_email = me@adamj.eu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Changelog = https://github.com/adamchainz/blacken-docs/blob/main/HISTORY.rst

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    black>=22.1.0
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    blacken-docs=blacken_docs:main

[coverage:run]
branch = True
parallel = True
source =
    blacken_docs
    tests

[coverage:paths]
source =
   src
   .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
