[metadata]
name = blacken_docs
version = 1.13.0
description = Run Black on Python code blocks in documentation files.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/asottile/blacken-docs
author = Anthony Sottile
author_email = asottile@umich.edu
maintainer = Adam Johnson
maintainer_email = me@adamj.eu
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
project_urls =
    Changelog = https://github.com/adamchainz/blacken-docs/blob/main/HISTORY.rst

[options]
packages = find:
install_requires =
    black>=22.1.0
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    blacken-docs=blacken_docs:main

[coverage:run]
branch = True
parallel = True
source =
    blacken_docs
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
